[gd_scene load_steps=3 format=3 uid="uid://km3b1la3wr60"]

[ext_resource type="Script" path="res://editor/layers/SkyCloudsListEntry.gd" id="1_8v4w1"]

[sub_resource type="FontVariation" id="FontVariation_kvtcc"]
variation_embolden = 1.0

[node name="CloudEntry" type="MarginContainer"]
offset_right = 89.0
offset_bottom = 35.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2
script = ExtResource("1_8v4w1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameTexture" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="DeleteCloudButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"RedButton"
theme_override_fonts/font = SubResource("FontVariation_kvtcc")
theme_override_font_sizes/font_size = 16
text = " â¨‰ "

[node name="CloudValue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 0
text_overrun_behavior = 3
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer/DeleteCloudButton" to="." method="_on_delete_cloud_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NameTexture/HBoxContainer/CloudValue" to="." method="_on_cloud_value_pressed"]
